k8s/deploy/dvote-gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvote-gateway
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      component: dvote-gateway
  template:
    metadata:
      labels:
        component: dvote-gateway
    spec:
      volumes:
        - name: dvote-gateway-run-volume
          persistentVolumeClaim:
            claimName: dvote-gateway-run-volume-claim
      containers:
        - name: dvote-gateway
          image: vocdoni/go-dvote:latest
          ports:
            - containerPort: 9090
            - containerPort: 26657
            - containerPort: 26656
            - containerPort: 4001
            - containerPort: 5001
            - containerPort: 4171
          volumeMounts:
            - name: dvote-gateway-run-volume
              mountPath: /app/run
              subPath: dvote-gateway-run
          resources:
            requests:
              memory: "2Gi"
