k8s/deploy/dvote-mananger-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvote-manager-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      component: dvote-manager-backend
  template:
    metadata:
      labels:
        component: dvote-manager-backend
    spec:
      volumes:
        - name: dvote-manager-backend-run-volume
          persistentVolumeClaim:
            claimName: dvote-manager-backend-run-volume-claim
      containers:
        - name: dvote-manager-backend
          image: vocdoni/manager-backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: dvote-manager-backend-run-volume
              mountPath: /app/run
              subPath: dvote-manager-backend-run
          resources:
            # requests:
            #   memory: "1Gi"
