k8s/deploy/dvote-mananger-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvote-manager-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      component: dvote-manager-frontend
  template:
    metadata:
      labels:
        component: dvote-manager-frontend
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: dvote-configmap
            items:
              - key: frontend_nginx_default
                path: default
      containers:
        - name: dvote-manager-frontend
          image: vocdoni/manager-frontend:nginx-latest
          resources:
            requests:
              memory: "1Gi"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/sites-available
              readOnly: true
              name: nginx-conf
