k8s/deploy/dvote-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dvote-gateway
  ports:
    - name: dvote-gateway-api
      port: 9090
      targetPort: 9090
    - name: dvote-gateway-tendermint
      port: 26657
      targetPort: 26657
