k8s/deploy/dvote-manager-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvote-manager-backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dvote-manager-backend
  ports:
    - name: dvote-manager-backend-api
      port: 8000
      targetPort: 8000
