k8s/deploy/dvote-manager-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvote-manager-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dvote-manager-frontend
  ports:
    - name: dvote-manager-frontend
      port: 80
      targetPort: 80
